<resources>
    <string name="app_name">Homework6</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="operation_success_state">Operation success state</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="active_users_count">Active users count: 0</string>
    <string name="removed_users_count">Removed users count: 0</string>
    <string name="go_back">Go Back</string>
    <string name="next">Next</string>
    <string name="all_users">All users</string>
</resources>