<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background = "@drawable/appbackground"
    >
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/enter_first_name"
        android:textColorHint="@color/cultured"
        android:textColor="@color/rich_black_forga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/cultured"
        android:textColor="@color/rich_black_forga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_age"
        android:textColorHint="@color/cultured"
        android:textColor="@color/rich_black_forga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/cultured"
        android:textColor="@color/rich_black_forga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age"
        />
    <!--realized that text itself should change color when
    application was already made, and I like my little
    square too much to remove-->
    <View
        android:id="@+id/state"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/success_state"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/operation_success_state"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/state"
        app:layout_constraintTop_toBottomOf="@id/email"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:textSize="20sp"
        android:textColor="@color/carulean_blue"
        android:textAllCaps="false"
        android:background="@color/green"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/state"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/remove_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@color/cerise"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_user"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_user"
        android:textSize="20sp"
        android:textColor="@color/cerise"
        android:textAllCaps="false"
        android:background="@color/carulean_blue"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_user"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/removed_users_count"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/removed_users_count"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/active_users_count"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/active_users_count"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/removed_users_count"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/all_users"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/all_users"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>